--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </div>
 
   <script>
-    function debounce(func, wait = 20, immediate = true) {
+    function debounce(func, wait = 20, immediate = true) {//paces the function call so it doesn't happen all the time. 
       var timeout;
       return function() {
         var context = this, args = arguments;
@@ -63,12 +63,20 @@
       };
     }
 
+    const sliderImages = document.querySelectorAll('.slide-in')
+
+    function checkSlide(e) {
+
+    }
+
+    window.addEventListener('scroll', debounce(checkSlide))//listens for a scroll event in the window object. Debounce limits the number of calls 
+
   </script>
 
   <style>
     html {
       box-sizing: border-box;
-      background: hsl(133, 78%, 38%);
+      background: hsl(133, 32%, 35%);
       font-family: 'helvetica neue';
       font-size: 20px;
       font-weight: 200;
