--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </div>
 
   <script>
-    function debounce(func, wait = 20, immediate = true) {//paces the function call so it doesn't happen all the time. 
+    function debounce(func, wait = 20, immediate = true) {//paces the function call so it doesn't happen as often. 
       var timeout;
       return function() {
         var context = this, args = arguments;
@@ -63,10 +63,27 @@
       };
     }
 
+    //selects all the images we will work on
     const sliderImages = document.querySelectorAll('.slide-in')
-
+    
+    
+    //this will happen when the page is scrolled. Looks for when the image should be shown in the page
     function checkSlide(e) {
+      sliderImages.forEach(slideImage => {
+        const slideInAt = (window.scrollY + window.innerHeight) - slideImage.height/2 //scrollY checkes how far from the top, but I need to know the bottom of the screen to decide when the image will start sliding in. The image will start rolling in halfway trought it's space (hence the /2 at the end).
+        const imageBottom = slideImage.offsetTop + slideImage.height //offsetTop shows how far away from the of the page the top of the image is. I added the height of the image because we are checking for the bottom
 
+        //conditions for the if statement further down. For clean reading
+        const isHalfShown = slideInAt > slideImage.offsetTop 
+        const isNotScrolledPast = window.scrollY < imageBottom
+
+        //if the image is halfway and not scrolled past it's position, we make it active. Otherwise, we deactivate it (scroll out)
+        if(isHalfShown && isNotScrolledPast) {
+          slideImage.classList.add('active')
+        } else {
+          slideImage.classList.remove('active')
+        }
+      })
     }
 
     window.addEventListener('scroll', debounce(checkSlide))//listens for a scroll event in the window object. Debounce limits the number of calls 
